force-app/main/default/objects/Case/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>문의와 관련된 티켓, 굿즈, 멤버십 또는 환불 대상 주문을 연결</description>
    <inlineHelpText>문의와 관련된 티켓, 굿즈, 멤버십 또는 환불 대상 주문을 연결</inlineHelpText>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>