force-app/main/default/objects/Case/fields/SDO_Analytics_Demo_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>SDO_Analytics_Demo_Closed_Date__c</fullName>
    <description>Demo-only synthetic case closure datetime for Service Insights charts that bucket by Case_Closed_Date in Data Cloud. Bulk-loadable when standard Case.ClosedDate is not API-updateable. Map this CRM field to ssot__Case__dlm.ssot__ClosedDate__c (or equivalent DMO closed-date column) via Data Cloud object mapping so Tableau Next SDM timelines spread across weeks.</description>
    <inlineHelpText>Synthetic closure timeline for SI dashboards. Populate via loader; keep in sync with closed-case cohort intent.</inlineHelpText>
    <label>SDO Analytics Demo Closed Date</label>
    <type>DateTime</type>
</CustomField>