force-app/main/default/objects/Case/fields/SDO_Analytics_Demo_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>SDO_Analytics_Demo_Created_Date__c</fullName>
    <formula>NULLVALUE( CreatedDate__c ,CreatedDate )</formula>
    <label>SDO Analytics Demo Created Date</label>
    <type>DateTime</type>
</CustomField>