force-app/main/default/objects/Case/recordTypes/Fan_Case.recordType-meta.xml
<RecordType>
    <fullName>Fan_Case</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Fan Case</label>
</RecordType>