force-app/main/default/objects/Case/listViews/Fan_Cases.listView-meta.xml
<ListView>
    <fullName>Fan_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Fan Cases</label>
</ListView>